Installation of backend, basic fixes to backend pages

--- a/generators/talia_admin/templates/views/admin/index.html.erb
+++ b/generators/talia_admin/templates/views/admin/index.html.erb
@@ -1,5 +1,5 @@
-<% for link in @links %>
-  <div id="<%= link  %>_access" class="main_menu_box">
-    <%= link_to h(link.titleize), :controller => "admin/#{h(link)}" %>
+<% for admin_page in active_pages %>
+  <div id="<%= admin_page  %>_access" class="main_menu_box">
+    <%= link_to h(admin_page.titleize), :controller => "admin/#{h(admin_page)}" %>
   </div>
 <% end %>
