Fixed image locations for java servers compatibility

--- a/generators/talia_admin/templates/views/layouts/admin.html.erb
+++ b/generators/talia_admin/templates/views/layouts/admin.html.erb
@@ -8,7 +8,7 @@
   <meta name="copyright" content="Copyright" />
   <meta name="robots" content="all" />
   <meta http-equiv="pragma" content="no-cache" />
-    <%= stylesheet_link_tag('backend')  %> 
+    <%= stylesheet_link_tag('talia_core/backend')  %> 
 	  <%= javascript_include_tag('prototype') %> 
  	  <%= javascript_include_tag('scriptaculous') %> 
  	  <%= javascript_include_tag('lowpro') %> 
