--- a/generators/talia_base/templates/app/views/layouts/sources.html.erb
+++ b/generators/talia_base/templates/app/views/layouts/sources.html.erb
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title><%= h(yield(:title) || "Talia | The Digital Library") %></title>
-    <%= stylesheet_link_tag 'main' %>
+    <%= stylesheet_link_tag 'talia_core/main' %>
   </head>
   <body>
     <div id="title_bar">
