--- a/generators/talia_admin/templates/public/stylesheets/talia_core/backend.css
+++ b/generators/talia_admin/templates/public/stylesheets/talia_core/backend.css
@@ -8,7 +8,7 @@ body {
 	margin:0;
 	padding: 0;
 	border: 0;
-	background: #FFF url(images/header_bg.gif) top left repeat-x;
+	background: #FFF url(images/backend/header_bg.gif) top left repeat-x;
 	font-family: Avenir, Arial, "Lucida Grande", Verdana, "Bitstream Vera Sans", Helvetica, sans-serif;
 	font-size:0.8125em;
 }
@@ -122,7 +122,7 @@ a:hover{
 	display: block;
 	height: 181px;
 	width:100%;
-	background: transparent url(images/header.jpg) top left no-repeat;
+	background: transparent url(images/backend/header.jpg) top left no-repeat;
 }
 	#testata h1{
 		display: none;
@@ -139,7 +139,7 @@ a:hover{
 	height: 45px;
 	width: 800px;
 	width:100%;
-	background: url(images/menu_bg.gif) top left repeat-x;
+	background: url(images/backend/menu_bg.gif) top left repeat-x;
 	text-align: left;
     margin: 0; padding: 0;
 }
@@ -148,7 +148,7 @@ a:hover{
 		padding: 14px 0 0 25px;
         margin: 0;
     	height: 45px;
-        background: url(images/menu.jpg) top left no-repeat;
+        background: url(images/backend/menu.jpg) top left no-repeat;
         background-position: -180px 0;
 	}
 	#menu li{
@@ -164,12 +164,12 @@ a:hover{
 		text-transform: uppercase;
 		font-size: 11px;
 		font-weight: bold;
-		background: transparent url(images/triangolino.gif) bottom center no-repeat;
+		background: transparent url(images/backend/triangolino.gif) bottom center no-repeat;
 		padding-bottom: 6px;
 	}
 	#menu li a:hover{
 		color: #FFFFFF;
-		background: transparent url(images/triangolino_full.gif) bottom center no-repeat;
+		background: transparent url(images/backend/triangolino_full.gif) bottom center no-repeat;
 	}
 
 /* ***************** ************** ************** */
@@ -199,7 +199,7 @@ a:hover{
 		margin: 0 0 10px 0;
 	}
 	#contenutoInterno ul li a{
-		background: transparent url(images/icona.gif) center left no-repeat;
+		background: transparent url(images/backend/icona.gif) center left no-repeat;
 		padding: 0 0 0 0px;
 	}
 	#contenutoInterno ul li a:hover{
@@ -238,7 +238,7 @@ a:hover{
 label#openid_label {
 	display: inline;
 	line-height: 30px;
-	background: transparent url(images/opednid.gif) center left no-repeat;
+	background: transparent url(images/backend/opednid.gif) center left no-repeat;
 	padding: 20px 20px 20px 35px;
 	height: 30px;
 }
@@ -280,7 +280,7 @@ div.main_menu_box a:hover{
 .rdf_header {
 	margin-top: 15px;
 	padding-left: 10px;
-	background: #333 url(/images/rdf_header_bg.gif) repeat-x top left;
+	background: #333 url(images/backend/rdf_header_bg.gif) repeat-x top left;
 	color: #fff;
 	font-weight: bold;
 	font-size: 1em;
@@ -403,7 +403,7 @@ table tr td input {
 	position: relative;
 	margin: 0 auto 0 auto;
 	width:780px;
-	background: #40332b url(images/footer_bg.gif) top left repeat-x;
+	background: #40332b url(images/backend/footer_bg.gif) top left repeat-x;
 }
 #footer {
 	position: relative;
